@@ -1,0 +1,19 @@
+Template: partman-swapfile/size
+Type: string
+Default: 2048
+# :sl3:
+_Description: Maximum size of swapfile
+ Please enter the absolute maximum size of swapfile in MiB.
+
+Template: partman-swapfile/percentage
+Type: string
+Default: 5
+# :sl3:
+_Description: Maximum percentage of free space to use for swapfile
+ Please enter the maximum percentage of free space on root filesystem to
+ use for swapfile.
+
+Template: partman-swapfile/progress_swap_formatting
+Type: text
+# :sl1:
+_Description: Creating swap file...
